# Paper-Trading-App

./: CMakeLists.txt  account.cpp  account.h  app.cpp  exception.h  holding.cpp  holding.h  holding.h.gch  portfolio.cpp  portfolio.h  portfolio.h.gch  trade.h.gch
